@@ -54,6 +54,7 @@ Bugfixes:
  * Issue #23: PASS wasn't rejected when user was already authenticated
  * Issue #26: used select() by default instead of poll() because of an asyncore module's defect
  * Issue #33: some FTPHandler class attributes wasn't resetted on REIN
+ * Issue #35: watch for APPE preceded by REST which makes no sense
 
 
 Version: 0.1.1 - Date: 2007-03-27
